--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@forzoom/compact-form",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "dist/compact-form.cjs.js",
+  "module": "dist/compact-form.esm.js",
   "license": "MIT",
   "types": "./types/index.d.ts",
   "scripts": {
@@ -15,19 +16,19 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@forzoom/uploader": "^0.2.1",
+    "@rollup/plugin-babel": "^5.2.0",
     "rollup": "^2.26.10",
     "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-vue": "~5",
     "tslib": "^2.0.1",
     "typescript": "^4.0.2",
     "vant": "^2.10.4",
     "vue": "^2.6.12",
+    "vue-class-component": "^7.2.5",
     "vue-property-decorator": "^9.0.0",
     "vue-template-compiler": "^2.6.12"
   },
-  "dependencies": {
-    "rollup-plugin-vue": "~5"
-  }
+  "dependencies": {}
 }
